--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   cursor: -webkit-grabbing;
 }
 </style>
- <script src="force-graph.js"></script>
+ <script src="//unpkg.com/force-graph"></script>
 </head>
 
 <body>
